# NNUF

./: .devcontainer.json  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  requirements.txt
listener_pkg/: README.md  package.xml  setup.cfg  setup.py
listener_pkg/listener_pkg/: listener.py
listener_pkg/resource/: listener_pkg
notebooks/: quantize_liteRT.py  quantize_onnx.py
seld_pkg/: README.md  package.xml  setup.cfg  setup.py
seld_pkg/seld_pkg/: __init__.py  inference.py  mlflow_test.py  seld.py
talker_pkg/: README.md  package.xml  setup.cfg  setup.py
talker_pkg/talker_pkg/: talker.py
